# couber

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite  deployment.yaml  skaffold.yaml
.github/workflows/: docker-build.yml  docker-push.yml
backend/: Cargo.toml
backend/resources/: app.js  style.css
backend/src/: database.rs  image_tagger.rs  main.rs  page_renderer.rs  video_fetcher.rs  video_store.rs
docker/: dummy.rs
frontend/: .eslintrc.js  README.md  dump.json  eslint.config.js  generate.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/public/css/: cover.css
frontend/src/: App.vue  main.ts
frontend/src/components/: Thumbnails.vue
scripts/: coub.sh  generic_vids.sh  launch.sh  remove_watermark.py
