[package]
name = "backend"
version = "0.1.0"
authors = ["Romain GERARD <r.gerard@criteo.com>"]
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11"

axum = { version = "0.8.8", features = ["default"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

r2d2 = "0.8"
r2d2_sqlite = "0.32"
rusqlite = { version = "0.38", features = ["bundled-full"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower = { version = "0.5.3", features = ["util"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
sha2 = {  version = "0.10.9", features = ["asm"] }
maud = { version = "0.27", features = ["axum"] }
urlencoding = "2.1"
