[package]
name = "backend"
version = "0.1.0"
authors = ["Romain GERARD <r.gerard@criteo.com>"]
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11"

axum = { version = "0.8.8", features = ["default"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
serde_with = { version = "3", features = ["json"] }
tower = { version = "0.5.3", features = ["util"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
sha2 = {  version = "0.10.9", features = ["asm"] }
maud = { version = "0.27", features = ["axum"] }
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
