[package]
name = "backend"
version = "0.1.0"
authors = ["Romain GERARD <r.gerard@criteo.com>"]
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.8.9", features = ["default"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
serde_with = { version = "3", features = ["json"] }
tower = { version = "0.5.3", features = ["util"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
sha2 = { version = "0.11.0" }
hex = "0.4"
maud = { version = "0.27", features = ["axum"] }
urlencoding = "2.1"
reqwest = { version = "0.13", features = ["json", "rustls", "rustls-native-certs", "zstd", "gzip"], default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
fs_extra = {  version = "1.3.0" }

[dev-dependencies]
tempfile = "3"
